--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,17 @@
             app:layout_constraintBottom_toBottomOf="@+id/navbar"
             app:layout_constraintTop_toTopOf="@+id/navbar"
             android:contentDescription="@string/logo"
-
+            />
+        <ImageButton
+            android:id="@+id/btnShoppingCart"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintTop_toTopOf="@+id/navbar"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_baseline_shopping_cart_24"
+            android:contentDescription="@string/shopping_cart"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
