feat: added shoppingCartOverview

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,7 @@
         />
 
     <Button
+        android:id="@+id/btnBuy"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="@string/buy"
