--- a/app/src/main/res/layout/activity_shopping_cart_overview.xml
+++ b/app/src/main/res/layout/activity_shopping_cart_overview.xml
@@ -52,6 +52,20 @@
             android:contentDescription="@string/logo"
             android:background="@drawable/rounded_corner_white"
             />
+        <Button
+            android:id="@+id/sendButton"
+            app:layout_constraintTop_toTopOf="@id/navbar"
+            app:layout_constraintBottom_toBottomOf="@id/navbar"
+            app:layout_constraintRight_toRightOf="@id/navbar"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/rounded_corner_gray"
+            android:text="@string/send"
+            android:textSize="11sp"
+            android:textAlignment="center"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.AppBarLayout>
     <TextView
