--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,54 +7,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".presentation.activity.ShoppingActivity">
 
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_height="70dp"
-        android:id="@+id/appbarLayout">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/navbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:background="@color/design_default_color_primary"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            >
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="100dp"
-                android:layout_height="50dp"
-                android:src="@drawable/jidl"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                app:layout_constraintBottom_toBottomOf="@+id/navbar"
-                app:layout_constraintTop_toTopOf="@+id/navbar"
-                app:layout_constraintLeft_toLeftOf="@id/navbar"
-                app:layout_constraintRight_toRightOf="@id/navbar"
-                android:contentDescription="@string/logo"
-                android:background="@drawable/rounded_corner_white"
-                />
-            <ImageButton
-                android:id="@+id/btnShoppingCart"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginEnd="20dp"
-                app:layout_constraintTop_toTopOf="@+id/navbar"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/ic_baseline_shopping_cart_24"
-                android:contentDescription="@string/shopping_cart"
-                android:background="@drawable/rounded_corner_gray"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.appbar.AppBarLayout>
-
-
+    <include layout="@layout/shoppingbar"/>
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:src="@drawable/jidl"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/navbar"
+        app:layout_constraintTop_toTopOf="@+id/navbar"
+        app:layout_constraintLeft_toLeftOf="@id/navbar"
+        app:layout_constraintRight_toRightOf="@id/navbar"
+        android:contentDescription="@string/logo"
+        android:background="@drawable/rounded_corner_white"
+        />
+    <ImageButton
+        android:id="@+id/btnShoppingCart"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toTopOf="@+id/navbar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_baseline_shopping_cart_24"
+        android:contentDescription="@string/shopping_cart"
+        android:background="@drawable/rounded_corner_gray"
+        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemRecyclerView"
         android:layout_width="match_parent"
