--- a/app/src/main/res/layout/activity_shopping_cart_overview.xml
+++ b/app/src/main/res/layout/activity_shopping_cart_overview.xml
@@ -8,66 +8,7 @@
     android:orientation="vertical"
     >
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_height="70dp"
-        android:id="@+id/appbarLayout"
-
-        >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/navbar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:background="@color/design_default_color_primary"
-        >
-        <Button
-            android:id="@+id/backButton"
-            app:layout_constraintTop_toTopOf="@id/navbar"
-            app:layout_constraintBottom_toBottomOf="@id/navbar"
-            app:layout_constraintLeft_toLeftOf="@id/navbar"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="5dp"
-            android:background="@drawable/rounded_corner_gray"
-            android:text="@string/arrow_left"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            />
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:src="@drawable/jidl"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/navbar"
-            app:layout_constraintTop_toTopOf="@+id/navbar"
-            app:layout_constraintLeft_toLeftOf="@id/navbar"
-            app:layout_constraintRight_toRightOf="@id/navbar"
-            android:contentDescription="@string/logo"
-            android:background="@drawable/rounded_corner_white"
-            />
-        <Button
-            android:id="@+id/sendButton"
-            app:layout_constraintTop_toTopOf="@id/navbar"
-            app:layout_constraintBottom_toBottomOf="@id/navbar"
-            app:layout_constraintRight_toRightOf="@id/navbar"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="5dp"
-            android:background="@drawable/rounded_corner_gray"
-            android:text="@string/send"
-            android:textSize="11sp"
-            android:textAlignment="center"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+    <include layout="@layout/shoppingcartbar"/>
     <TextView
         android:id="@+id/item_textview"
         app:layout_constraintTop_toBottomOf="@id/appbarLayout"
@@ -76,7 +17,7 @@
         android:layout_height="wrap_content"
         android:text="@string/items_in_shopping_cart"
         android:textAlignment="center"
-        android:textSize="30dp"
+        android:textSize="30sp"
         />
     <androidx.recyclerview.widget.RecyclerView
         app:layout_constraintTop_toBottomOf="@id/item_textview"
