--- a/app/src/main/res/layout/shoppingbar.xml
+++ b/app/src/main/res/layout/shoppingbar.xml
@@ -28,5 +28,17 @@
             android:contentDescription="@string/logo"
             android:background="@drawable/rounded_corner_white"
             />
+        <ImageButton
+            android:id="@+id/btnShoppingCart"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintTop_toTopOf="@+id/navbar"
+            app:layout_constraintRight_toRightOf="@+id/navbar"
+            app:layout_constraintBottom_toBottomOf="@+id/navbar"
+            android:src="@drawable/ic_baseline_shopping_cart_24"
+            android:contentDescription="@string/shopping_cart"
+            android:background="@drawable/rounded_corner_gray"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.appbar.AppBarLayout>
